fix: Too big bubble #194

--- a/src/popup/pages/popup.scss
+++ b/src/popup/pages/popup.scss
@@ -31,6 +31,6 @@ body {
     overflow: auto;
 }
 
-.popup {
+.popupContainer.popup {
     width: 493px;
 }
